# SVF

./: .clang-format  .cmake-format.py  .codecov.yml  .config.cmake.in  .config.in  .editorconfig  .gitignore  .travis.yml  1  CMakeLists.txt  Contributors.txt  Dockerfile  ExtAPI.json  Initial  LICENSE.TXT  Makefile  Makefile.common  Makefile.common.in  Makefile.llvm.config  Normailized_Grammar.txt  README.md  SVF Alterations.txt  SVFIR.dot  art.peg  build.sh  clang-format.sh  clean.sh  codecov.yml  compile_commands.json  config.in  config.status  configure  extapi.c  gen_lib.sh  index.html  ll.h  logs  package.json  params.json  perf_compare.py  (+6 more)
lib/: CMakeLists.txt  Makefile  extAPI.txt
lib/AbstractExecution/: ExeState.cpp  IntervalExeState.cpp  RelExeState.cpp  RelationSolver.cpp  SVFIR2ItvExeState.cpp  SVFIR2Relation.cpp
lib/CFL/: Alias.cpp  CFGNormalizer.cpp  CFL.cpp  CFLAlias.cpp  CFLBase.cpp  CFLGrammar.cpp  CFLGraphBuilder.cpp  CFLSolver.cpp  CFLStat.cpp  CFLVF.cpp  GrammarBuilder.cpp
lib/CUDD/: CMakeLists.txt  Makefile  cpu_stats.c  cpu_time.c  cuddAPI.c  cuddAddAbs.c  cuddAddApply.c  cuddAddFind.c  cuddAddInv.c  cuddAddIte.c  cuddAddNeg.c  cuddAddWalsh.c  cuddAndAbs.c  cuddAnneal.c  cuddApa.c  cuddApprox.c  cuddBddAbs.c  cuddBddCorr.c  cuddBddIte.c  cuddBridge.c  cuddCache.c  cuddCheck.c  cuddClip.c  cuddCof.c  cuddCompose.c  cuddDecomp.c  cuddEssent.c  cuddExact.c  cuddExport.c  cuddGenCof.c  cuddGenetic.c  cuddGroup.c  cuddHarwell.c  cuddInit.c  cuddInt.c  cuddInteract.c  cuddLCache.c  cuddLevelQ.c  cuddLinear.c  cuddLiteral.c  (+60 more)
lib/DDA/: ContextDDA.cpp  DDAClient.cpp  DDAPass.cpp  DDAStat.cpp  FlowDDA.cpp
lib/FastCluster/: fastcluster.cpp  fastcluster_dm.cpp.inc
lib/Graphs/: CFLGraph.cpp  CHG.cpp  ConsG.cpp  ExternalPAG.cpp  GraphWriter.cpp  ICFG.cpp  IRGraph.cpp  OfflineConsG.cpp  PAG.cpp  PTACallGraph.cpp  SVFG.cpp  SVFGOPT.cpp  SVFGReadWrite.cpp  SVFGStat.cpp  ThreadCallGraph.cpp  VFG.cpp
lib/MSSA/: CMakeLists.txt  Makefile  MemPartition.cpp  MemRegion.cpp  MemSSA.cpp  SVFG.cpp  SVFGBuilder.cpp  SVFGOPT.cpp  SVFGStat.cpp
lib/MTA/: FSMPTA.cpp  LockAnalysis.cpp  LockResultValidator.cpp  MHP.cpp  MTA.cpp  MTAAnnotator.cpp  MTAResultValidator.cpp  MTAStat.cpp  Makefile  PCG.cpp  TCT.cpp
lib/MemoryModel/: AbstractPointsToDS.cpp  CHA.cpp  CMakeLists.txt  ConsG.cpp  ExternalPAG.cpp  ICFGBuilderFromFile.cpp  LocMemModel.cpp  LocationSet.cpp  Makefile  MemModel.cpp  OfflineConsG.cpp  PAG.cpp  PAGBuilder.cpp  PAGBuilderFromFile.cpp  PointerAnalysis.cpp  PointerAnalysisImpl.cpp  PointsTo.cpp  SVFIR.cpp  SVFStatements.cpp  SVFSymbols.cpp  SVFVariables.cpp  SymbolTableInfo.cpp
lib/SABER/: ArgvFlow.cpp  CMakeLists.txt  DoubleFreeChecker.cpp  DpdChecker.cpp  FileChecker.cpp  LeakChecker.cpp  Makefile  PathCondAllocator.cpp  ProgSlice.cpp  SaberAnnotator.cpp  SaberCheckerAPI.cpp  SaberCondAllocator.cpp  SaberSVFGBuilder.cpp  SrcSnkDDA.cpp  Z3ExprManager.cpp
lib/SVF-FE/: BreakConstantExpr.cpp  CHA.cpp  CHG.cpp  CHGBuilder.cpp  CPPUtil.cpp  CallGraphBuilder.cpp  DCHG.cpp  DataFlowUtil.cpp  Graph2Json.cpp  ICFGBuilder.cpp  LLVMLoopAnalysis.cpp  LLVMModule.cpp  LLVMUtil.cpp  LocMemModel.cpp  MemModel.cpp  MemModelBuilder.cpp  PAGBuilder.cpp  SVFIRBuilder.cpp  SVFModule.cpp  SVFUtil.cpp  SymbolTableBuilder.cpp  SymbolTableInfo.cpp
lib/SVF-FE/TBHC/: FlowSensitiveTBHC.cpp  TypeBasedHeapCloning.cpp
lib/SVF-LLVM/: BreakConstantExpr.cpp  CHGBuilder.cpp  CMakeLists.txt  CPPUtil.cpp  DCHG.cpp  ICFGBuilder.cpp  LLVMLoopAnalysis.cpp  LLVMModule.cpp  LLVMUtil.cpp  SVFIRBuilder.cpp  SymbolTableBuilder.cpp
lib/SVFIR/: PAGBuilderFromFile.cpp  SVFIR.cpp  SVFStatements.cpp  SVFValue.cpp  SVFVariables.cpp  SymbolTableInfo.cpp
lib/Util/: AnalysisUtil.cpp  BDDExpr.cpp  BasicTypes.cpp  BitVector.cpp  BreakConstantExpr.cpp  CMakeLists.txt  CPPUtil.cpp  CallGraphBuilder.cpp  CallerSensitve.cpp  CommandLine.cpp  Conditions.cpp  CoreBitVector.cpp  CppUtil.cpp  DataFlowUtil.cpp  DynamicBitVector.cpp  ExeState.cpp  ExtAPI.cpp  ExtAPI.json  ICFG.cpp  ICFGBuilder.cpp  Makefile  NodeIDAllocator.cpp  Options.cpp  PTACallGraph.cpp  PTAStat.cpp  PathCondAllocator.cpp  PointsTo.cpp  RaceAnnotator.cpp  SICFG.cpp  SVFFunction.cpp  SVFIR2ItvExeState.cpp  SVFModule.cpp  SVFPTACallGraph.cpp  SVFStat.cpp  SVFUtil.cpp  SVFValue.cpp  SVFValues.cpp  SimpleOptions.cpp  ThreadAPI.cpp  ThreadCallGraph.cpp  (+7 more)
lib/WPA/: Andersen.cpp  AndersenHCD.cpp  AndersenHLCD.cpp  AndersenLCD.cpp  AndersenSCD.cpp  AndersenSFR.cpp  AndersenStat.cpp  AndersenTest.cpp  AndersenWave.cpp  AndersenWaveDiff.cpp  AndersenWaveDiffWithType.cpp  CGSCC.cpp  CMakeLists.txt  CSC.cpp  FlowSensitive.cpp  FlowSensitivePlaceholder.cpp  FlowSensitiveStat.cpp  FlowSensitiveTBHC.cpp  IFDS.cpp  Makefile  Steensgaard.cpp  TypeAnalysis.cpp  TypeBasedHeapCloning.cpp  VersionedFlowSensitive.cpp  VersionedFlowSensitiveStat.cpp  WPAPass.cpp
svf/: CMakeLists.txt
svf-llvm/: CMakeLists.txt
svf-llvm/include/: CMakeLists.txt
svf-llvm/include/SVF-LLVM/: BasicTypes.h  BreakConstantExpr.h  CHGBuilder.h  CMakeLists.txt  CppUtil.h  DCHG.h  GEPTypeBridgeIterator.h  ICFGBuilder.h  LLVMLoopAnalysis.h  LLVMModule.h  LLVMUtil.h  ObjTypeInference.h  SVFIRBuilder.h  SVFModule.h  (+4 more)
svf-llvm/lib/: BreakConstantExpr.cpp  CHGBuilder.cpp  CMakeLists.txt  CppUtil.cpp  DCHG.cpp  GenExtAPI.cmake  ICFGBuilder.cpp  LLVMLoopAnalysis.cpp  LLVMModule.cpp  LLVMUtil.cpp  ObjTypeInference.cpp  SVFIRBuilder.cpp  SVFIRExtAPI.cpp  SVFLLVMValue.cpp  SVFModule.cpp  SVFValue.cpp  SymbolTableBuilder.cpp  TypeInference.cpp  extapi.c
svf-llvm/tools/: CMakeLists.txt
svf/lib/: CMakeLists.txt
tools/CFL/: CMakeLists.txt  cfl.cpp
tools/DDA/: CMakeLists.txt  dda.cpp
tools/Example/: CMakeLists.txt  Makefile  svf-ex.cpp
tools/MTA/: CMakeLists.txt  LockResultValidator.cpp  LockResultValidator.h  MTAAnnotator.cpp  MTAAnnotator.h  MTAResultValidator.cpp  MTAResultValidator.h  mta.cpp
tools/PreProcessor/: CMakeLists.txt  pre-processor.cpp
tools/SABER/: CMakeLists.txt  Makefile  saber.cpp
tools/Summary/: CMakeLists.txt  summary.cpp
tools/WPA/: CMakeLists.txt  Makefile  wpa.cpp
(+1195 files in other folders)
